CHANGELOG

UNRELEASED

    * FIX: load V2 using a DOMElement when V3 is loaded ASYNCHRONOUSLY with /latest/
      * tested on all majors browsers:
        Chrome stable
        Firefox stable
        IE 8, 9, 10, 11
      * tested on correponding customer websites

2015-26-03  3.0.2

    * temp /latest/ fix for some clients loading /latest/ in async mode

2015-26-03  3.0.1

    * fix npm usage, was missing a dependency

2015-25-03  3.0.0
    * V2 users, see the migration guide at https://github.com/algolia/algoliasearch-client-js/wiki/Migration-guide-from-2.x.x-to-3.x.x
    * BREAKING CHANGES:
      * `new AlgoliaSearch()` => `algoliasearch()` #40
        - The only exported global property is now `algoliasearch`
        - `opts`:
          - `dsnHost` removed, use `hosts:[dsnHost, other hosts]`
          - `dsn` removed, use `hosts:[non-dsn-host, non-dsn-host]`
          - `requestTimeoutInMs` renamed to `timeout`
          - `method` renamed to `protocol`. Protocol should be specified as `http:` or `https:`
          - `hosts` behavior changed, when using custom hosts:
            - no shuffling
            - no dsn host is prepended to the list
        - removed `AlgoliaExplainResults`, no obvious use ATM
        - calling algoliasearch() without an applicationID or apiKey will throw
        - Helper: `new AlgoliaSearchHelper()` => `algoliasearch.helper()`, same function signature
      * no more window.ALGOLIA_VERSION
        - you can find the version in algoliasearch.version
      * all api methods now use the (err, content) convention #43
        It means that instead of doing:
          ```js
            index.search(function found(success, content) {
              if (!success) {
                console.log('Error was:', content);
                return;
              }

              console.log('OK!', content);
            });
          ```
        You must do:
          ```js
            index.search(function found(err, content) {